<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="volley">Volley</string>
    <string name="httpurlconn">HttpURLconn</string>
    <string name="sendMessDemo">Send Messages Demo</string>
    <string name="closeDrawer">CloseDrawer</string>
    <string name="openDrawer">OpenDrawer</string>
    <string name="UserID">User ID:</string>
    <string name="Uname">Name:</string>
    <string name="inputUID">Your user ID</string>
    <string name="inputUname">Your name</string>
    <string name="subUser">Submit User</string>
</resources>
